# mono-embedded

./: .gitignore  README.md
Cpp/: CMakeLists.txt  MonoUtils.hpp  main.cpp
Cs/TestLib/TestLib/: TestLib.sln
Cs/TestLib/TestLib/TestLib/: Class1.cs  IAspects.cs  SampleImplementations.cs  TestLib.csproj
Cs/TestLib/TestLib/TestLib/Properties/: AssemblyInfo.cs
